--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
-  "main": "./dist/extension.js",
+  "activationEvents": [
+    "onLanguage:markdown",
+    "onCommand:markdown-image-to-text.getTextFromImage"
+  ],
+  "main": "./out/extension.js",
   "contributes": {
+    "languages": [
+      {
+        "id": "markdown",
+        "extensions": [".md"],
+        "aliases": ["Markdown"]
+      }
+    ],
     "commands": [
       {
         "command": "markdown-image-to-text.getTextFromImage",
-        "title": "Extract Text from Image",
-        "category": "MarkdownImageToText"
+        "title": "Extract Text from Markdown Image"
       }
     ]
   },
@@ -46,6 +55,6 @@
     "webpack-cli": "^6.0.1"
   },
   "dependencies": {
-    "tesseract.js": "^6.0.1"
+    "tesseract.js": "^5.1.1"
   }
 }
