--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "onLanguage:markdown",
     "onCommand:markdown-image-to-text.getTextFromImage"
   ],
-  "main": "./out/extension.js",
+  "main": "./dist/extension.js",
+  "publisher": "DemetriosLoizides",
   "contributes": {
     "languages": [
       {
