--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "onLanguage:markdown",
     "onCommand:markdown-image-to-text.getTextFromImage"
   ],
-  "main": "./dist/extension.js",
-  "publisher": "DemetriosLoizides",
+  "main": "./out/extension.js",
   "contributes": {
     "languages": [
       {
