yet another bug fix v0.0.3

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,13 +1,6 @@
-.vscode/**
-.vscode-test/**
-node_modules/**
-src/**
-.gitignore
-.yarnrc
+node_modules/
+src/
+.vscode/
+test/
+README.md
 webpack.config.js
-vsc-extension-quickstart.md
-**/tsconfig.json
-**/eslint.config.mjs
-**/*.map
-**/*.ts
-**/.vscode-test.*
