--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
   "license": "MIT",
   "scripts": {
     "vscode:prepublish": "npm run package",
-    "compile": "webpack",
+    "compile": "webpack --mode development --devtool source-map",
+    "devpackage": "webpack --mode development --devtool source-map",
     "watch": "webpack --watch",
     "package": "webpack --mode production --devtool hidden-source-map",
     "compile-tests": "tsc -p . --outDir out",
